# coova-chilli

./: .gitignore
.github/workflows/: go-build.yml  rust.yml
coovachilli-go/: .dockerignore  CHANGELOG.md  CHANGES_SUMMARY.md  CORRECTIONS_APPLIED.md  Dockerfile  E2E_TEST_STACK_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.txt  IPv6-IMPLEMENTATION-SUMMARY.md  Makefile  OPTIMIZATIONS_REPORT.md  PERFORMANCE_GUIDE.md  RADIUS_ADVANCED_FEATURES.md  README.md  README_SECURITY.md  ROADMAP.md  SECURITY_FIXES_APPLIED.md  TESTING.md  build.sh  condown.sh  config.example.yaml  config.yaml  conup.sh  coverage.out  coverage_final.out  go.mod  go.sum
coovachilli-go/.claude/: settings.local.json
coovachilli-go/.devcontainer/: devcontainer.json
coovachilli-go/.github/workflows/: build.yml  e2e-tests.yml  integration-tests.yml
coovachilli-go/cmd/coovachilli/: command.go  command_interfaces.go  command_test.go  main.go  main_integration_test.go
coovachilli-go/docs/: ADMIN_API.md  ADMIN_API_SPEC.md  ANALYSE_CRITIQUE_PARCOURS_UTILISATEUR.md  AUTHENTICATION_IMPROVEMENTS.md  CI_CD_TESTING_SUMMARY.md  CORRECTIONS_APPLIQUEES.md  CORRECTIONS_PHASE2.md  DEPLOYMENT_15K_USERS.md  FAS_SPEC.md  FILTERING_AND_EXPORT.md  INTEGRATION_TESTING.md  IPv6-Implementation.md  POINT_2_SUMMARY.md  POINT_5_SUMMARY.md  POINT_6_SCALABILITY.md  POINT_6_SUMMARY.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_EXTENDED.md  SECURITY_FIXES_SUMMARY.md  TEST_COVERAGE_REPORT.md
coovachilli-go/examples/: admin_config.yaml  blocklist_domains.txt  blocklist_ips.txt  category_rules.txt  security_config.yaml  url_filter_config.yaml
coovachilli-go/pkg/admin/: api.go  api_test.go  dashboard.go  multisite.go  policy.go  ratelimit.go  server.go  server_test.go  snapshot.go  validation.go
coovachilli-go/pkg/auth/: integration.go  local.go  local_test.go  manager.go  manager_test.go
coovachilli-go/pkg/cluster/: cluster_test.go  manager.go  peer.go  protocol.go
coovachilli-go/pkg/cmdsock/: cmdsock.go  cmdsock_test.go
coovachilli-go/pkg/config/: config.go  reloader.go
coovachilli-go/pkg/core/: interfaces.go  reaper.go  reaper_test.go  session.go  session_bench_test.go  session_state.go  session_test.go  shaper.go  shaper_test.go
coovachilli-go/pkg/dhcp/: dhcp.go  dhcp_helper.go  dhcp_helper_test.go  dhcp_ipv6_test.go  dhcp_test.go  ratelimit.go
coovachilli-go/pkg/disconnect/: disconnect.go
coovachilli-go/pkg/dns/: dns.go  dns_test.go  proxy.go  proxy_test.go
coovachilli-go/pkg/eapol/: crypto.go  crypto_test.go  eapol.go  eapol_test.go  helpers_test.go
coovachilli-go/pkg/fas/: token.go  token_test.go
coovachilli-go/pkg/filter/: filter.go  filter_test.go
coovachilli-go/pkg/firewall/: firewall.go  firewall_test.go  iptables.go  ufw.go  ufw_config.go  ufw_config_test.go
coovachilli-go/pkg/garden/: garden.go  garden_test.go
coovachilli-go/pkg/gdpr/: compliance.go
coovachilli-go/pkg/guest/: guest.go
coovachilli-go/pkg/http/: middleware.go  server.go  server_test.go
coovachilli-go/pkg/icmpv6/: radvert.go  radvert_test.go
coovachilli-go/pkg/logexport/: exporter.go  exporter_test.go
coovachilli-go/pkg/metrics/: metrics.go  prometheus.go
coovachilli-go/pkg/performance/: cache.go  pool.go
coovachilli-go/pkg/persistence/: persistence.go
coovachilli-go/pkg/radius/: eap.go  eap_test.go  proxy.go  proxy_test.go  radius.go  radius_test.go
coovachilli-go/scripts/: migrate_passwords.sh
coovachilli-go/test/: KNOWN_ISSUES.md
coovachilli-go/tests/: integration_dualstack_test.go
coovachilli-rust/: Cargo.toml  README.md  missing_features.md
coovachilli-rust/chilli-bench/: Cargo.toml
coovachilli-rust/chilli-bin/: Cargo.toml
coovachilli-rust/chilli-bin/src/: cmdsock.rs  config.rs  lib.rs  main.rs
coovachilli-rust/chilli-bin/tests/: debug_task_starvation.rs  eap_mschapv2_test.rs  eap_test.rs  l2_test.rs  proxy_arp_test.rs  quota_test.rs  uam_test.rs  upload_quota_test.rs
coovachilli-rust/chilli-core/: Cargo.toml
coovachilli-rust/chilli-http/: Cargo.toml
coovachilli-rust/chilli-http/src/: server.rs
coovachilli-rust/chilli-http/static/: portal.js
coovachilli-rust/chilli-http/templates/: error.html  login.html  logoff.html  status.html  success.html  success_popup.html
coovachilli-rust/chilli-http/tests/: portal_integration_test.rs
coovachilli-rust/chilli-ipc/: Cargo.toml
coovachilli-rust/chilli-net/: Cargo.toml
coovachilli-rust/chilli-net/fuzz/: Cargo.toml
coovachilli-rust/chilli-net/fuzz/fuzz_targets/: dhcp_packet_parser.rs
coovachilli-rust/chilli-net/src/: dhcp.rs  eap.rs  eap_mschapv2.rs  eapol.rs  firewall.rs  lib.rs  mschapv1.rs  mschapv2.rs  radius.rs  radius_proxy.rs  tun.rs
coovachilli-rust/chilli-query/: Cargo.toml
coovachilli-rust/chilli-query/src/: main.rs
pkg/dhcp/: dhcp.go
(+71 files in other folders)
