[package]
name = "chilli-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
chilli-core = { path = "../chilli-core" }
chilli-net = { path = "../chilli-net" }
chilli-http = { path = "../chilli-http" }
chilli-ipc = { path = "../chilli-ipc" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
toml = "0.8"
anyhow = "1.0"
etherparse = "0.19"
trust-dns-proto = "0.22"
tracing-subscriber = "0.3"
byteorder = "1.4"
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
md5 = "0.7"
