[package]
name = "chilli-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.34.0"
pnet_base = "0.34.0"
chilli-core = { path = "../chilli-core" }
chilli-net = { path = "../chilli-net" }
chilli-http = { path = "../chilli-http" }
chilli-ipc = { path = "../chilli-ipc" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
toml = "0.8"
anyhow = "1.0"
libc = "0.2"
etherparse = "0.19"
trust-dns-proto = "0.22"
tracing-subscriber = "0.3"
byteorder = "1.4"
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
md5 = "0.8"
async-trait = "0.1.50"
