[package]
name = "chilli-http"
version = "0.1.0"
edition = "2021"

[dependencies]
chilli-core = { path = "../chilli-core" }
axum = { version = "0.7", features = ["form"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hex = "0.4"
url = { version = "2.5", features = ["serde"] }
md-5 = "0.10"
tera = "1.20.0"
once_cell = "1.19.0"
urlencoding = "2.1.3"
tower-http = { version = "0.5", features = ["fs"] }
serde_urlencoded = "0.7"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
chilli-core = { path = "../chilli-core", features = ["test-helpers"] }
