[package]
name = "chilli-net"
version = "0.1.0"
edition = "2024"

[dependencies]
chilli-core = { path = "../chilli-core" }
tun-rs = { version = "2", features = ["async"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
byteorder = "1.4"
anyhow = "1.0"
getrandom = "0.2"
hex = "0.4"
md5 = "0.7"
