[package]
name = "chilli-net"
version = "0.1.0"
edition = "2021"

[dependencies]
chilli-core = { path = "../chilli-core" }
hmac = "0.12"
tun-rs = { version = "2", features = ["async"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
byteorder = "1.4"
anyhow = "1.0"
getrandom = "0.2"
hex = "0.4"
md-5 = "0.10"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
des = "0.8.1"
md4 = "0.10.2"
sha1 = "0.10.6"
