[package]
name = "chilli-query"
version = "0.1.0"
edition = "2021"

[dependencies]
chilli-ipc = { path = "../chilli-ipc" }
chilli-core = { path = "../chilli-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
